tests/ui/impl-trait/precise-capturing/redundant-machine-applicable.stderr
error: all possible in-scope parameters are already captured, so `use<...>` syntax is redundant
  --> $DIR/redundant-machine-applicable.rs:15:22
   |
LL | fn end_position() -> impl Sized + use<> {}
   |                      ^^^^^^^^^^--------
   |                                |
   |                                help: remove the `use<...>` syntax
   |
note: the lint level is defined here
  --> $DIR/redundant-machine-applicable.rs:11:9
   |
LL | #![deny(impl_trait_redundant_captures)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: all possible in-scope parameters are already captured, so `use<...>` syntax is redundant
  --> $DIR/redundant-machine-applicable.rs:20:24
   |
LL | fn start_position() -> impl use<> + Sized {}
   |                        ^^^^^--------^^^^^
   |                             |
   |                             help: remove the `use<...>` syntax

error: all possible in-scope parameters are already captured, so `use<...>` syntax is redundant
  --> $DIR/redundant-machine-applicable.rs:25:25
   |
LL | fn middle_position() -> impl Sized + use<> + Send {}
   |                         ^^^^^^^^^^^^^--------^^^^
   |                                      |
   |                                      help: remove the `use<...>` syntax

error: aborting due to 3 previous errors

